# r3

./: .hgeol  .hgignore
comps/: comps.sln
comps/BonX/: R3MetaBonX.cpp  R3MetaBonX.h
comps/BonX/R3Meta_BON/: Audio.cpp  Audio.h  Binary.cpp  Binary.h  Bitset.cpp  Bitset.h  Bitset128.cpp  Bitset128.h  Bitset16.cpp  Bitset16.h  Bitset256.cpp  Bitset256.h  Bitset32.cpp  Bitset32.h  Bitset512.cpp  Bitset512.h  Bitset64.cpp  Bitset64.h  Bitset8.cpp  Bitset8.h  Bool.cpp  Bool.h  Categories.cpp  Categories.h  Category.cpp  Category.h  CategoryInheritance.cpp  CategoryInheritance.h  CategoryInput.cpp  CategoryInput.h  CategoryMember.h  CategoryOrReference.cpp  CategoryOrReference.h  CategoryOutput.cpp  CategoryOutput.h  CategoryReference.cpp  CategoryReference.h  CategoryRelation.cpp  CategoryRelation.h  Channel.cpp  (+93 more)
comps/R3Decorator/: Decorator.aps  Decorator.cpp  Decorator.h  Decorator.rc  Decorator.sln  Decorator.vcproj  DecoratorApp.cpp  DecoratorApp.def  DecoratorCompositePart.cpp  DecoratorCompositePart.h  DecoratorConfig.h  DecoratorCusts.h  DecoratorImpl.cpp  DecoratorImpl.h  DecoratorLib.h  DecoratorLib.idl  DecoratorLib.tlb  DecoratorLib_i.c  DecoratorLib_p.c  GMEOLEData.cpp  GMEOLEData.h  R3Decorator.vcproj  StdAfx.h  dlldata.c  mfcdual.cpp  resource.h
comps/R3Decorator/parts/: CategoryAttributePart.cpp  CategoryAttributePart.h  CategoryPart.cpp  CategoryPart.h  ContextAttributePart.cpp  ContextAttributePart.h  ContextPart.cpp  ContextPart.h  EventAttributePart.cpp  EventAttributePart.h  EventPart.cpp  EventPart.h  FieldPart.cpp  FieldPart.h  NEStereoLabelPart.cpp  NEStereoLabelPart.h  ScantyPart.cpp  ScantyPart.h  ScantyValuePart.cpp  ScantyValuePart.h
comps/R3Interpreter/: BON2Component.cpp  BON2Component.h  ComponentConfig.h  ComponentLib.tlb  ComponentLib_h.h  ComponentLib_i.c  ComponentLib_p.c  R3Interpreter.vcproj  StdAfx.h
comps/R3Interpreter/workers/: wData.cpp  wData.hpp  wProtocol.cpp  wProtocol.hpp  wSchema.cpp  wSchema.hpp
eclipse/com.csf.qtassist/: .project  build.properties  plugin.xml
eclipse/jsDeclarations/client/: Agent.js  Client.js  Signal.js  network.js  networkDialog.ui  uiLoader.js
meta/: R3Meta.mga  R3Meta.xmp
model/: R3.mga  staff.mga  test.mga  testContexts.mga
runtime/: runtime.sln
runtime/QmlModules/QtDesktop/: ToolBar.qml  components.sln
runtime/cfg/: server.cfg
runtime/client/: client.cpp  client.h  client.qrc  client.rc  client.ui  client.vcproj  main.cpp  stdafx.h
runtime/core/: ReadMe.txt  core.cpp  core.vcproj  stdafx.h
runtime/core/fields/: Audio.h  Bool.h  Date.h  DateTime.h  DateTimeInterval.h  DateTimeValue.h  Enum.h  Field.h  File.h  Image.h  Int.h  Int16.h  Int32.h  Int64.h  Int8.h  Money.cpp  Money.h  Real.h  Real32.h  Real64.h  Scanty.h  Set.h  Simple.h  String.h  Time.h  Timestamp.cpp  Timestamp.h  Video.h
runtime/include/: Doxyfile
runtime/include/async/: api.h  asioBridge.hpp  event.hpp  eventWaiter.hpp  exception.hpp  fiber.hpp  future.hpp  futureWaiter.hpp  iservice.hpp  mutex.hpp  result.hpp  resultContainer.hpp  resultWaiter.hpp  service.hpp  worker.hpp  (+1 more)
runtime/libasync/: ReadMe.txt  libasync.vcproj  stdafx.cpp  stdafx.h
runtime/libmodel/: libmodel.vcproj  stdafx.cpp  stdafx.h
runtime/libnet/: ReadMe.txt  libnet.vcproj  stdafx.cpp  stdafx.h
runtime/libpgc/: libpgc.vcproj
runtime/libpgs/: libpgs.vcproj  stdafx.h
runtime/libpluma/: ReadMe.txt  libpluma.vcproj
runtime/libutils/: ReadMe.txt  libutils.vcproj  stdafx.cpp  stdafx.h
runtime/make/cmake/: CMakeLists.txt  Local.cmake  Local.cmake.clang  Local.cmake.mingw  Local.cmake.vs9  Logging.cmake  Pch.cmake  Setup.cmake  SetupBinOut.cmake  excludeDefBuild.txt.sample
runtime/make/cmake/app/: CMakeLists.txt
runtime/make/cmake/app/client/: CMakeLists.txt
runtime/make/cmake/app/clientqt/: CMakeLists.txt
runtime/make/cmake/app/desktop/: CMakeLists.txt
runtime/make/cmake/app/entry/: CMakeLists.txt
runtime/make/cmake/app/server/: CMakeLists.txt
runtime/make/cmake/app/uiRunner/: CMakeLists.txt
runtime/make/cmake/app/victim/: CMakeLists.txt
runtime/make/cmake/apps/: CMakeLists.txt
runtime/make/cmake/lib/: CMakeLists.txt
runtime/make/cmake/lib/async/: CMakeLists.txt  config.h.in
runtime/make/cmake/lib/heap/: CMakeLists.txt
runtime/make/cmake/lib/heapqt/: CMakeLists.txt
runtime/make/cmake/lib/log/: CMakeLists.txt
runtime/make/cmake/lib/pg/: CMakeLists.txt
runtime/make/cmake/lib/pgc/: CMakeLists.txt
runtime/make/cmake/lib/pluma/: CMakeLists.txt
runtime/make/cmake/lib/utils/: CMakeLists.txt
runtime/make/cmake/libs/: CMakeLists.txt
runtime/make/cmake/libs/async/: CMakeLists.txt
runtime/make/cmake/libs/net/: CMakeLists.txt
runtime/make/cmake/libs/pluma/: CMakeLists.txt
runtime/make/cmake/libs/utils/: CMakeLists.txt
runtime/make/cmake/plug/: CMakeLists.txt
runtime/make/cmake/plug/async/: CMakeLists.txt
runtime/make/cmake/plug/client/: CMakeLists.txt
runtime/make/cmake/plug/net/: CMakeLists.txt  FindOpenSSL.cmake
runtime/make/cmake/plug/pgc/: CMakeLists.txt
runtime/make/cmake/plug/server/: CMakeLists.txt
runtime/make/cmake/ui/: CMakeLists.txt
runtime/make/cmake/ui/desktop/: CMakeLists.txt
runtime/make/cmake/ui/platform1/: CMakeLists.txt
runtime/pgc/: ReadMe.txt  connection.cpp  connection.hpp  connectionImpl.cpp  connectionImpl.hpp  cppType.hpp  exception.cpp  exception.hpp  fixEndian.hpp  fromDb2Cpp.hpp  julianUtils.h  ntoa.hpp  pgc.cpp  pgc.vcproj  result.cpp  result.hpp  resultImpl.cpp  resultImpl.hpp  statement.cpp  statement.hpp  statementImpl.cpp  stdafx.cpp  stdafx.h
runtime/server/: server.cpp  server.vcproj  stdafx.h
runtime/src/: Doxyfile  heapNewDelete.cpp  plumaNewDelete.cpp
runtime/statics/: index.qml
runtime/testmodel/: stdafx.cpp  stdafx.h  testmodel.cpp  testmodel.vcproj
runtime/testpgc/: stdafx.h  testpgc.vcproj
runtime/todo/: root.tdl
runtime/tools/: dropBOM.bat
runtime/victim/: ReadMe.txt  schemaSyncronizer.cpp  schemaSyncronizer.hpp  stdafx.cpp  stdafx.h  victim.cpp  victim.cpp.asyncConnectorChannel  victim.cpp.asyncSessions  victim.vcproj
(+1428 files in other folders)
