PROJECT (server)


SET(SRC
	${SRC_DIR}/server/entry.cpp
	${SRC_DIR}/heapNewDelete.cpp
)
SOURCE_GROUP(src FILES ${SRC})

ADD_EXECUTABLE(server ${SRC_STUB} ${SRC})

SET_TARGET_PROPERTIES(server
	PROPERTIES RUNTIME_OUTPUT_DIRECTORY
	${SERVERBIN_DIR})

TARGET_LINK_LIBRARIES(server libheap libutils libpluma liblog)

IF(CMAKE_COMPILER_IS_GNUCXX)
	TARGET_LINK_LIBRARIES(server ${Boost_LIBRARIES})
ENDIF()
