PROJECT (libheap)

SET(INCLUDE
	${INC_DIR}/heap/heap.hpp
)
SOURCE_GROUP(include FILES ${INCLUDE})

SET(SRC
	${SRC_DIR}/heap/heap.cpp
	${SRC_DIR}/heapNewDelete.cpp
)
SOURCE_GROUP(src FILES ${SRC})

SET(SRC_HDR
)
SOURCE_GROUP(src FILES ${SRC_HDR})

ADD_DEFINITIONS(-DHEAP_EXPORTS)

PRESETUP_BIN_OUT(SRC_STUB)
ADD_LIBRARY(libheap SHARED ${SRC_STUB} ${INCLUDE} ${SRC} ${SRC_HDR})
SETUP_BIN_OUT(libheap server)
