PROJECT (libheapqt)

FIND_PACKAGE(Qt4 4.7.4 REQUIRED QtCore)
INCLUDE(${QT_USE_FILE})


SET(INCLUDE
	${INC_DIR}/heap/heap.hpp
)
SOURCE_GROUP(include FILES ${INCLUDE})

SET(SRC
	${SRC_DIR}/heap/heapqt.cpp
	${SRC_DIR}/heapNewDelete.cpp
)
SOURCE_GROUP(src FILES ${SRC})

SET(SRC_HDR
)
SOURCE_GROUP(src FILES ${SRC_HDR})

ADD_DEFINITIONS(-DHEAP_EXPORTS)

ADD_LIBRARY(libheapqt SHARED ${SRC_STUB} ${INCLUDE} ${SRC} ${SRC_HDR})

SETUP_BIN_OUT(libheapqt client libheap)

TARGET_LINK_LIBRARIES(libheapqt ${QT_LIBRARIES})