PROJECT (libheapqt)

FIND_PACKAGE(Qt4 4.6.0 REQUIRED QtCore)
INCLUDE(${QT_USE_FILE})


SET(INCLUDE
	${INC_DIR}/heap/heap.hpp
)
SOURCE_GROUP(include FILES ${INCLUDE})

SET(SRC
	${SRC_DIR}/heap/heapqt.cpp
	${SRC_DIR}/heapNewDelete.cpp
)
SOURCE_GROUP(src FILES ${SRC})

SET(SRC_HDR
)
SOURCE_GROUP(src FILES ${SRC_HDR})

ADD_DEFINITIONS(-Dlibheap_EXPORTS)

ADD_LIBRARY(libheapqt SHARED ${INCLUDE} ${SRC} ${SRC_HDR})
SET_TARGET_PROPERTIES(libheapqt PROPERTIES PREFIX "" IMPORT_PREFIX "")

SETUP_BIN_OUT(libheapqt client libheap)

TARGET_LINK_LIBRARIES(libheapqt ${QT_LIBRARIES})